// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image can be used when:  [FRAGILE] allows to set lazy attribute for image 1`] = `
<DocumentFragment>
  <picture
    class="image"
  >
    <img
      alt="My image"
      loading="lazy"
      src="https://localhost:3000/"
    />
  </picture>
</DocumentFragment>
`;

exports[`Image can be used when:  [FRAGILE] assigns classes 1`] = `
<DocumentFragment>
  <picture
    class="image my-class"
  >
    <img
      alt="My image"
      loading="eager"
      src="https://localhost:3000/"
    />
  </picture>
</DocumentFragment>
`;
